--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
   },
   "devDependencies": {
     "@semantic-ui-react/css-patch": "^1.0.0"
-  }
+  },
+  "proxy": "https://evening-garden-04580.herokuapp.com/"
 }
